# GB_EMU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
emulator/: CMakeLists.txt  bus.cpp  cart.cpp  cpu.cpp  cpu_fetch.cpp  cpu_proc.cpp  cpu_registers.cpp  emu.cpp  instructions.cpp  io.cpp  joypad.cpp  lcd.cpp  ppu.cpp  timer.cpp  window.cpp
gbemu/: CMakeLists.txt  main.cpp
include/: Instructions.h  bus.h  cart.h  common.h  cpu.h  cpu_registers.h  emu.h  io.h  joypad.h  lcd.h  ppu.h  ram.h  timer.h  types.h  window.h
lib/: CMakeLists.txt  cart.cpp  cpu.cpp  cpu_proc.cpp  instructions.cpp  lcd.cpp  ppu.cpp  ram.cpp  window.cpp
libs/plog-1.1.10/include/plog/: Util.h
tests/: CMakeLists.txt  check_gbe.c
